--- a/plugin.yml
+++ b/plugin.yml
@@ -1,49 +1,75 @@
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
-# PurePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
-
-name: PurePerms
-main: _64FF00\PurePerms\PurePerms
-version: 2.0.2
-api: [4.0.0]
+name: MPEPerms
+main: XackiGiFF\MPEPerms\MPEPerms
+version: 1.0.0
+api: [ 5.0.0 ]
 load: POSTWORLD
-author: "Vecnavium , 64FF00 & ProjectInfinity"
+author: "64FF00 & ProjectInfinity | Remake to API 5.0.0 by XackiGiFF"
+website: https://github.com/PurePlugins/MPErePerms
 permissions:
-  pperms:
+  MPEPerms:
+    description: 'MPErePerms by 64FF00! (Twitter: @64FF00)'
+  mperms.command:
     default: op
-    description: "PurePerms by 64FF00! (Twitter: @64FF00)"
-  plperms.command:
+    description: Allows you to use all MPErePerms commands.
+  mperms.command.grpinfo:
     default: op
-    description: "Allows you to use all PurePerms commands."
-  pperms.command.addrank:
+    description: Allows you to see an info of group
+  mperms.command.addgroup:
     default: op
-    description: "Allows you to add a new rank"
-  pperms.command.defrank:
+    description: Allows you to add a new group to the groups list.
+  mperms.command.addparent:
     default: op
-    description: "Allows you to set the default rank manually."
-  pperms.command.plperms:
+    description: Allows you to add a group to another group inheritance list.
+  mperms.command.defgroup:
     default: op
-    description: "Allows you to find permissions for a specific plugin."
-  pperms.command.ranks:
+    description: Allows you to set the default group manually.
+  mperms.command.fperms:
     default: op
-    description: "Allows you to see a list of all rank."
-  pperms.command.listuperms:
+    description: Allows you to find permissions for a specific plugin.
+  mperms.command.groups:
     default: op
-    description: "Allows you to see a list of all permissions from a user."
-  pperms.command.ppinfo:
+    description: Allows you to see a list of all groups.
+  mperms.command.listgperms:
+    default: op
+    description: Allows you to see a list of all permissions from a group.
+  mperms.command.listuperms:
+    default: op
+    description: Allows you to see a list of all permissions from a user.
+  mperms.command.ppinfo:
     default: true
-    description: "Allows you to get current PurePerms information."
-  pperms.command.rmrank:
+    description: Allows you to get current MPErePerms information.
+  mperms.command.ppreload:
     default: op
-    description: "Allows you to remove a rank from the ranks list."
-  pperms.command.setrank:
+    description: Allows you to reload all MPErePerms configurations.
+  mperms.command.rmgroup:
     default: op
-    description: "Allows you to set rank for a user."
-  pperms.command.setuperm:
+    description: Allows you to remove a group from the groups list.
+  mperms.command.rmparent:
     default: op
-    description: "Allows you to add a permission to a user."
-  pperms.command.unsetgperm:
+    description: Allows you to remove a group from another group inheritance list.
+  mperms.command.setgperm:
     default: op
-    description: "Allows you to remove a permission from the group."
-  pperms.command.unsetuperm:
+    description: Allows you to add a permission to the group.
+  mperms.command.setgroup:
     default: op
-    description: "Allows you to remove a permission from the user."
+    description: Allows you to set group for a user.
+  mperms.command.setuperm:
+    default: op
+    description: Allows you to add a permission to a user.
+  mperms.command.unsetgperm:
+    default: op
+    description: Allows you to remove a permission from the group.
+  mperms.command.unsetuperm:
+    default: op
+    description: Allows you to remove a permission from the user.
+  mperms.command.usrinfo:
+    default: op
+    description: Allows you to see info about a user.
+  mperms.noeul:
+    default: true
+    description: Allows you to access all 'Noeul' related features.
+  mperms.noeul.ppsudo:
+    default: true
+    description: Allows you to use the Noeul 'ppsudo' command.
