deleted:    .poggit.yml 	new file:   MPEPerms.png 	deleted:    PurePerms.png 	modified:   README.md 	modified:   icon.png 	modified:   icon128.png 	modified:   plugin.yml 	modified:   resources/config.yml 	renamed:    resources/ranks.yml -> resources/groups.yml 	modified:   resources/messages-en.yml 	renamed:    src/_64FF00/PurePerms/DataManager/UserDataManager.php -> src/XackiGiFF/MPEPerms/DataManager/UserDataManager.php 	renamed:    src/_64FF00/PurePerms/DataProviders/DefaultProvider.php -> src/XackiGiFF/MPEPerms/DataProviders/DefaultProvider.php 	renamed:    src/_64FF00/PurePerms/DataProviders/JsonProvider.php -> src/XackiGiFF/MPEPerms/DataProviders/JsonProvider.php 	renamed:    src/_64FF00/PurePerms/DataProviders/MySQLProvider.php -> src/XackiGiFF/MPEPerms/DataProviders/MySQLProvider.php 	new file:   src/XackiGiFF/MPEPerms/DataProviders/ProviderInterface.php 	renamed:    src/_64FF00/PurePerms/DataProviders/SQLite3Provider.php -> src/XackiGiFF/MPEPerms/DataProviders/SQLite3Provider.php 	new file:   src/XackiGiFF/MPEPerms/EventManager/PPGroupChangedEvent.php 	new file:   src/XackiGiFF/MPEPerms/EventManager/PPGroupExpiredEvent.php 	renamed:    src/_64FF00/PurePerms/PurePerms.php -> src/XackiGiFF/MPEPerms/MPEPerms.php 	renamed:    src/_64FF00/PurePerms/PPGroup.php -> src/XackiGiFF/MPEPerms/PPGroup.php 	new file:   src/XackiGiFF/MPEPerms/PPListener.php 	renamed:    src/_64FF00/PurePerms/PPMessages.php -> src/XackiGiFF/MPEPerms/PPMessages.php 	new file:   src/XackiGiFF/MPEPerms/Task/PPExpDateCheckTask.php 	new file:   src/XackiGiFF/MPEPerms/Task/PPMySQLTask.php 	new file:   src/XackiGiFF/MPEPerms/api/CommandsRegisterAPI.php 	new file:   src/XackiGiFF/MPEPerms/api/MPEPermsAPI.php 	new file:   src/XackiGiFF/MPEPerms/cmd/AddGroup.php 	new file:   src/XackiGiFF/MPEPerms/cmd/DefGroup.php 	new file:   src/XackiGiFF/MPEPerms/cmd/FPerms.php 	new file:   src/XackiGiFF/MPEPerms/cmd/Groups.php 	renamed:    src/_64FF00/PurePerms/Commands/PPInfo.php -> src/XackiGiFF/MPEPerms/cmd/M

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -30,8 +30,8 @@ mysql-settings:
   db: "YourDBNameGoesHere"
   
 # Special thanks to @jazzwhistle for helping me with this cool feature! #JAZZWHISTLE-FTW
-# Ranks that can only be set on console
-# Also, users with a superadmin-rank can only have their rank changed on console
+# Groups that can only be set on console
+# Also, users with a superadmin-group can only have their group changed on console
 # - array
-superadmin-ranks: ["OP"]
+superadmin-groups: ["OP"]
 ...
