--- a/resources/messages-en.yml
+++ b/resources/messages-en.yml
@@ -5,19 +5,19 @@
 messages-version: "1.4.0_01"
 language: "en"
 cmds:
-  addrank:
-    desc: "Adds a new rank"
-    usage: "Usage: /addrank <rank>"
+  addgroup:
+    desc: "Adds a new group"
+    usage: "Usage: /addgroup <group>"
     messages:
-      rank_added_successfully: "Added %var0% to the rank list successfully."
-      rank_already_exists: "Rank %var0% already exists."
-      invalid_rank_name: "Invalid Rank Name."
-  defrank:
-    desc: "Allows you to set default rank."
-    usage: "Usage: /defrank <rank> [world]"
+      group_added_successfully: "Added %var0% to the group list successfully."
+      group_already_exists: "Group %var0% already exists."
+      invalid_group_name: "Invalid Group Name."
+  defgroup:
+    desc: "Allows you to set default group."
+    usage: "Usage: /defgroup <group> [world]"
     messages:
-      defrank_successfully: "Default rank has been successfully set to %var0%."
-      rank_not_exist: "rank %var0% does NOT exist."
+      defgroup_successfully: "Default group has been successfully set to %var0%."
+      group_not_exist: "group %var0% does NOT exist."
       level_not_exist: "World %var0% does NOT exist."
   plperms:
     desc: "Shows a list of all permissions for a specific plugin."
@@ -26,32 +26,32 @@ cmds:
       no_plugin_perms: "Plugin %var0% doesn't have any permissions."
       plugin_not_exist: "Plugin %var0% does NOT exist."
       plugin_perms_list: "List of all plugin permissions from %var0% (%var1% / %var2%) : "
-  ranks:
-    desc: "Shows a list of all ranks."
+  groups:
+    desc: "Shows a list of all groups."
     messages:
-      all_registered_ranks: "All registered ranks: %var0%"
+      all_registered_groups: "All registered groups: %var0%"
   ppinfo: 
     desc: "Shows current PurePerms information including author, version, and etc."
     messages:
       ppinfo_console: "You are currently using PurePerms v%var0% by %var1%."
       ppinfo_player: "This server is using PurePerms v%var0% by %var1%."
-  rmrank:
-    desc: "Removes a rank from the ranks list."
-    usage: "Usage: /rmrank <rank>"
+  rmgroup:
+    desc: "Removes a group from the groups list."
+    usage: "Usage: /rmgroup <group>"
     messages:
-      ranks_removed_successfully: "Removed %var0% from the rank list successfully."
-      ranks_not_exist: "rank %var0% does NOT exist."
-      invalid_ranks_name: "Invalid rank Name."
-  setrank:
-    desc: "Sets a rank for the user."
-    usage: "Usage: /setrank <player> <rank> <exp_time> [world]"
+      groups_removed_successfully: "Removed %var0% from the group list successfully."
+      groups_not_exist: "group %var0% does NOT exist."
+      invalid_groups_name: "Invalid group Name."
+  setgroup:
+    desc: "Sets a group for the user."
+    usage: "Usage: /setgroup <player> <group> <exp_time> [world]"
     messages:
-      access_denied_01: "You don't have permission to set a player's rank to %var0%."
-      access_denied_02: "You don't have permission to change rank of a player with ranks %var0%."
-      rank_not_exist: "Rank %var0% does NOT exist."
+      access_denied_01: "You don't have permission to set a player's group to %var0%."
+      access_denied_02: "You don't have permission to change group of a player with groups %var0%."
+      group_not_exist: "Group %var0% does NOT exist."
       level_not_exist: "World %var0% does NOT exist."
-      on_player_ranks_change: "Your rank has been changed to a / an %var0%!"
-      setrank_successfully: "Added %var0% to the rank successfully."
+      on_player_groups_change: "Your group has been changed to a / an %var0%!"
+      setgroup_successfully: "Added %var0% to the group successfully."
   setuperm: 
     desc: "Adds a permission to the user."
     usage: "Usage: /setuperm <player> <permission> [world]"
@@ -66,9 +66,9 @@ cmds:
       uperm_removed_successfully: "Removed permission %var0% from %var1% successfully."
 logger_messages:
   getConfigValue_01: "Key %var0% not found in config.yml."
-  getDefaultGroup_01: "More than one default ranks was declared in the ranks file."
-  getDefaultGroup_02: "No default ranks was found in the rankss file."
-  getDefaultGroup_03: "Setting the default ranks automatically."
+  getDefaultGroup_01: "More than one default groups was declared in the groups file."
+  getDefaultGroup_02: "No default groups was found in the groupss file."
+  getDefaultGroup_03: "Setting the default groups automatically."
   getGroup_01: "Group %var0% not found."
   getGroup_02: "Group %var0% has invalid or corrupted data."
   registerPlayer: "Registering player %var0%..."
@@ -77,5 +77,5 @@ logger_messages:
   setProvider_SQLITE3: "Data provider is set to SQLITe3."
   setProvider_NotFound: "Provider %var0% does NOT exist. Setting the data provider to default."
   unregisterPlayer: "Unregistering player %var0%..."
-  YAMLProvider_InvalidGroupsSettings: "INVALID GROUPS.YML SETTINGS: Please check if you have an invalid or corrupted ranks.yml."
+  YAMLProvider_InvalidGroupsSettings: "INVALID GROUPS.YML SETTINGS: Please check if you have an invalid or corrupted groups.yml."
 ...
