modified:   plugin.yml 	modified:   resources/config.yml 	new file:   resources/messages-cz.yml 	new file:   resources/messages-de.yml 	new file:   resources/messages-id.yml 	new file:   resources/messages-it.yml 	new file:   resources/messages-jp.yml 	new file:   resources/messages-ko.yml 	new file:   resources/messages-ru.yml 	new file:   resources/messages-sk.yml 	new file:   resources/messages-sp.yml 	new file:   resources/messages-tr.yml 	new file:   resources/messages-ua.yml 	modified:   src/XackiGiFF/MPEPerms/DataManager/UserDataManager.php 	modified:   src/XackiGiFF/MPEPerms/DataProviders/DefaultProvider.php 	modified:   src/XackiGiFF/MPEPerms/DataProviders/JsonProvider.php 	modified:   src/XackiGiFF/MPEPerms/DataProviders/MySQLProvider.php 	modified:   src/XackiGiFF/MPEPerms/DataProviders/ProviderInterface.php 	modified:   src/XackiGiFF/MPEPerms/DataProviders/SQLite3Provider.php 	new file:   src/XackiGiFF/MPEPerms/DataProviders/YamlV1Provider.php 	renamed:    src/XackiGiFF/MPEPerms/EventManager/PPGroupChangedEvent.php -> src/XackiGiFF/MPEPerms/EventManager/MPGroupChangedEvent.php 	renamed:    src/XackiGiFF/MPEPerms/EventManager/PPGroupExpiredEvent.php -> src/XackiGiFF/MPEPerms/EventManager/MPGroupExpiredEvent.php 	modified:   src/XackiGiFF/MPEPerms/MPEPerms.php 	renamed:    src/XackiGiFF/MPEPerms/PPGroup.php -> src/XackiGiFF/MPEPerms/MPGroup.php 	modified:   src/XackiGiFF/MPEPerms/PPListener.php 	modified:   src/XackiGiFF/MPEPerms/Task/PPExpDateCheckTask.php 	modified:   src/XackiGiFF/MPEPerms/api/CommandsRegisterAPI.php 	modified:   src/XackiGiFF/MPEPerms/api/MPEPermsAPI.php 	modified:   src/XackiGiFF/MPEPerms/cmd/AddGroup.php 	modified:   src/XackiGiFF/MPEPerms/cmd/DefGroup.php 	modified:   src/XackiGiFF/MPEPerms/cmd/FPerms.php 	modified:   src/XackiGiFF/MPEPerms/cmd/Groups.php 	modified:   src/XackiGiFF/MPEPerms/cmd/MPInfo.php 	modified:   src/XackiGiFF/MPEPerms/cmd/RmGroup.php 	modified:   src/XackiGiFF/MPEPerms/cmd/SetGroup.php 	deleted:    src/XackiGi

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,17 +2,17 @@
 
 name: MPEPerms
 main: XackiGiFF\MPEPerms\MPEPerms
-version: 1.0.0
+version: 1.0.0-dev
 api: [ 5.0.0 ]
 load: POSTWORLD
 author: "64FF00 & ProjectInfinity | Remake to API 5.0.0 by XackiGiFF"
-website: https://github.com/PurePlugins/MPErePerms
+website: https://github.com/XackiGiFF/MPEPerms
 permissions:
   MPEPerms:
-    description: 'MPErePerms by 64FF00! (Twitter: @64FF00)'
+    description: 'MPEPerms by XackiGiFF!'
   mperms.command:
     default: op
-    description: Allows you to use all MPErePerms commands.
+    description: Allows you to use all MPEPerms commands.
   mperms.command.grpinfo:
     default: op
     description: Allows you to see an info of group
@@ -67,3 +67,9 @@ permissions:
   mperms.command.usrinfo:
     default: op
     description: "Allows you to remove a permission from the user."
+  mperms.noeul:
+    default: true
+    description: Allows you to access all 'Noeul' related features.
+  mperms.noeul.ppsudo:
+    default: true
+    description: Allows you to use the Noeul 'ppsudo' command.
