--- a/resources/messages-id.yml
+++ b/resources/messages-id.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Translator : DevilLord Red Eagle / Darius Ellert Klaus / facebook.com/darius.redeagle
 
@@ -62,16 +62,17 @@ cmds:
       level_not_exist: "World %var0% tidak ada."
       no_user_perms: "Permain %var0% tidak mempunyai permission."
       user_perms_list: "Daftar semua permission pemain dari %var0% (%var1% / %var2%) : "
-  mpinfo:
+  ppinfo:
     desc: "Mendapatkan info PurePerm termasuk penulis, versi, dll."
     messages:
-      mpinfo_console: "Kamu memakai MPErePerms v%var0% oleh %var1%."
-      mpinfo_player: "Server ini memakai MPErePerms v%var0% oleh %var1%."
-  mpreload:
-    desc: "Reload semua konfigurasi MPErePerms."
+      ppinfo_console: "Kamu memakai MPEPerms v%var0% oleh %var1%."
+      ppinfo_player: "Server ini memakai MPEPerms v%var0% oleh %var1%."
+      plugin_cmds_list: "Daftar perintah untuk plugin %var0%: "
+  ppreload:
+    desc: "Reload semua konfigurasi MPEPerms."
     messages:
       successfully_reloaded: "Semua konfigurasi telah di reload."
-  mpsudo:
+  ppsudo:
     desc: "Registers or logs into your Noeul account."
     usage: "Usage: /ppsudo <login / register>"
     messages:
