--- a/resources/messages-it.yml
+++ b/resources/messages-it.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Translated in Italian by AnThOnEx (Twitter: @AryToNeX)
 
@@ -62,16 +62,17 @@ cmds:
       level_not_exist: "Il mondo %var0% non esiste."
       no_user_perms: "Il giocatore %var0% non ha permessi."
       user_perms_list: "Lista dei permessi del giocatore %var0% (%var1% / %var2%) : "
-  mpinfo:
-    desc: "Mostra informazioni riguardo MPErePerms, il suo autore, ecc."
+  ppinfo:
+    desc: "Mostra informazioni riguardo MPEPerms, il suo autore, ecc."
     messages:
-      mpinfo_console: "Stai usando MPErePerms v%var0% sviluppato da %var1%."
-      mpinfo_player: "Questo server usa MPErePerms v%var0% sviluppato da %var1%."
-  mpreload:
-    desc: "Ricarica le configurazioni di MPErePerms."
+      ppinfo_console: "Stai usando MPEPerms v%var0% sviluppato da %var1%."
+      ppinfo_player: "Questo server usa MPEPerms v%var0% sviluppato da %var1%."
+      plugin_cmds_list: "Elenco di tutti i comandi del plugin %var0%: "
+  ppreload:
+    desc: "Ricarica le configurazioni di MPEPerms."
     messages:
       successfully_reloaded: "Configurazioni ricaricate con successo."
-  mpsudo:
+  ppsudo:
     desc: "Registers or logs into your Noeul account."
     usage: "Usage: /ppsudo <login / register>"
     messages:
