--- a/resources/messages-jp.yml
+++ b/resources/messages-jp.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Original Japanese Translation by onebone (jyc00410@gmail.com)
 # Translated into fluent Japanese by haniokasai (11/04/2015) (htek@haniokasai.com, @haniokasai for Twitter)
@@ -62,16 +62,17 @@ cmds:
       level_not_exist: "ワールド%var0%は存在しません。"
       no_user_perms: "プレーヤー%var0%は何の権限も持っていません。"
       user_perms_list: "%var0%の権限を表示します (%var1% / %var2%) : "
-  mpinfo:
-    desc: "MPErePermsの情報、例えば作成者、バージョン、など"
+  ppinfo:
+    desc: "MPEPermsの情報、例えば作成者、バージョン、など"
     messages:
-      mpinfo_console: "いまあなたはMPErePerms v%var0% by %var1%を使っています。"
-      mpinfo_player: "このサーバーはMPErePerms v%var0% by %var1%を使っています。"
-  mpreload:
-    desc: "全てのMPErePerms設定をリロードします。"
+      ppinfo_console: "いまあなたはMPEPerms v%var0% by %var1%を使っています。"
+      ppinfo_player: "このサーバーはMPEPerms v%var0% by %var1%を使っています。"
+      plugin_cmds_list: "プラグイン%var0%コマンド"
+  ppreload:
+    desc: "全てのMPEPerms設定をリロードします。"
     messages:
       successfully_reloaded: "全てのプラグインの設定がリロードされました。"
-  mpsudo:
+  ppsudo:
     desc: "登録またはノウル アカウントにログインします。"
     usage: "Usage: /ppsudo <login / register>"
     messages:
