--- a/resources/messages-ru.yml
+++ b/resources/messages-ru.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Russian language resource by @0-Eclipse-0, @vvzar, @Pub4Game and @seetch
 
@@ -32,7 +32,7 @@ cmds:
     messages:
       no_plugin_perms: "Плагин %var0% не имеeт никаких разрешений."
       plugin_not_exist: "Плагин %var0% не существует."
-      plugin_perms_list: "Список всех разрешений плагин из %var0% (%var1% / %var2%) : "
+      plugin_perms_list: "Список всех разрешений плагина из %var0% (%var1% / %var2%) : "
   groups:
     desc: "Показывает список всех групп."
     messages:
@@ -62,17 +62,17 @@ cmds:
       level_not_exist: "Мир %var0% не существует."
       no_user_perms: "У игрока %var0% нет никаких пользовательских разрешений."
       user_perms_list: "Список всех разрешений для игрока %var0% (%var1% / %var2%):"
-  mpinfo:
-    desc: "Показывает всю информацию о плагине MPErePerms, включая версию, автора и т.д."
+  ppinfo:
+    desc: "Показывает всю информацию о плагине MPEPerms, включая версию, автора и т.д."
     messages:
-      mpinfo_console: "Вы используете MPErePerms версии v%var0% от %var1%."
-      mpinfo_player: "На этом сервере используется MPEPerms версии %var0% от %var1%."
+      ppinfo_console: "Вы используете MPEPerms версии v%var0% от %var1%."
+      ppinfo_player: "На этом сервере используется MPEPerms версии %var0% от %var1%."
       plugin_cmds_list: "Список всех команд плагина %var0%: "
-  mpreload:
-    desc: "Перезагружает все настройки MPErePerms."
+  ppreload:
+    desc: "Перезагружает все настройки MPEPerms."
     messages:
       successfully_reloaded: "Все настройки плагина были успешно перезагружены."
-  mpsudo:
+  ppsudo:
     desc: "Регистры или журналы в вашем Noeul внимание."
     usage: "Применение: /ppsudo <авторизоваться / регистр>"
     messages:
