--- a/resources/messages-sk.yml
+++ b/resources/messages-sk.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Slovak message resource by @Michael2010117 (GitHub)
 
@@ -62,16 +62,17 @@ cmds:
       level_not_exist: "Svet %var0% neexistuje."
       no_user_perms: "Hrac %var0% nema ziadne uzivatelske opravnenie."
       user_perms_list: "Zoznam vsetkych uzivatelskych prav od %var0% (%var1% / %var2%) : "
-  mpinfo:
-    desc: "Prijimajte aktualny MPErePerms informacie, vratane autora, verzia, atd."
+  ppinfo:
+    desc: "Prijimajte aktualny MPEPerms informacie, vratane autora, verzia, atd."
     messages:
-      mpinfo_console: "Prave pouzivas MPErePerms v%var0% od %var1%."
-      mpinfo_player: "Tento server pouziva MPErePerms v%var0% by %var1%."
-  mpreload:
-    desc: "Znovu nacita vsetky konfiguracie MPErePerms."
+      ppinfo_console: "Prave pouzivas MPEPerms v%var0% od %var1%."
+      ppinfo_player: "Tento server pouziva MPEPerms v%var0% by %var1%."
+      plugin_cmds_list: "Zoznam vsetkych prikazov pluginu %var0%: "
+  ppreload:
+    desc: "Znovu nacita vsetky konfiguracie MPEPerms."
     messages:
       successfully_reloaded: "Vsetky konfiguracie a pluginy boli uspesne obnovene."
-  mpsudo:
+  ppsudo:
     desc: "Registers or logs into your Noeul account."
     usage: "Usage: /ppsudo <login / register>"
     messages:
