--- a/resources/messages-sp.yml
+++ b/resources/messages-sp.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Original Spanish message resource by @JoahDave (GitHub)
 # Fixed "ALMOST EVERYTHING" by @iksaku (GitHub) (Follow me on Twitter: @iksaku2) [Hype! ( ^ω^ )]
@@ -64,16 +64,17 @@ cmds:
       level_not_exist: "El mundo %var0% NO existe."
       no_user_perms: "El usuario %var0% no tiene ningun permiso."
       user_perms_list: "Lista de todos los permisos de usuario de %var0% (%var1% / %var2%) : "
-  mpinfo:
-    desc: "Obtén información de MPErePerms, incluyendo autor, versión, etc... #iksaku"
+  ppinfo:
+    desc: "Obtén información de MPEPerms, incluyendo autor, versión, etc... #iksaku"
     messages:
-      mpinfo_console: "Actualmente estas utilizando MPErePerms v%var0% por %var1%."
-      mpinfo_player: "Este servidor esta utlizando MPErePerms v%var0% por %var1%."
-  mpreload:
-    desc: "Recarga las configuraciones de MPErePerms."
+      ppinfo_console: "Actualmente estas utilizando MPEPerms v%var0% por %var1%."
+      ppinfo_player: "Este servidor esta utlizando MPEPerms v%var0% por %var1%."
+      plugin_cmds_list: "Lista de comandos del plugin %var0%: "
+  ppreload:
+    desc: "Recarga las configuraciones de MPEPerms."
     messages:
       successfully_reloaded: "Todas las configuraciones del plugin han sido recargadas."
-  mpsudo:
+  ppsudo:
     desc: "Registers or logs into your Noeul account."
     usage: "Usage: /ppsudo <login / register>"
     messages:
