--- a/resources/messages-ua.yml
+++ b/resources/messages-ua.yml
@@ -1,4 +1,4 @@
-# MPErePerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
+# MPEPerms by 64FF00 (xktiverz@gmail.com, @64ff00 for Twitter)
 
 # Ukrainian messages resource by @samalero (GitHub)
 
@@ -62,16 +62,17 @@ cmds:
       level_not_exist: "Світ %var0% не існує."
       no_user_perms: "У гравця %var0% немає ніяких користувацьких дозволів."
       user_perms_list: "Список всіх дозволів для гравця %var0% (%var1% / %var2%):"
-  mpinfo:
-    desc: "Показує всю інформацію про плагін MPErePerms, включаючи версію, автора і т.д."
+  ppinfo:
+    desc: "Показує всю інформацію про плагін MPEPerms, включаючи версію, автора і т.д."
     messages:
-      mpinfo_console: "Ви використовуєте MPErePerms версії v%var0% від %var1%."
-      mpinfo_player: "На цьому сервері використовується MPErePerms версії v%var0% від %var1%."
-  mpreload:
-    desc: "Перезавантажує всі налаштування MPErePerms."
+      ppinfo_console: "Ви використовуєте MPEPerms версії v%var0% від %var1%."
+      ppinfo_player: "На цьому сервері використовується MPEPerms версії v%var0% від %var1%."
+      plugin_cmds_list: "Список всіх команд для плагіну %var0%: "
+  ppreload:
+    desc: "Перезавантажує всі налаштування MPEPerms."
     messages:
       successfully_reloaded: "Всі налаштування плагіну були успішно перезавантажені."
-  mpsudo:
+  ppsudo:
     desc: "Registers or logs into your Noeul account."
     usage: "Usage: /ppsudo <login / register>"
     messages:
